--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"type": "module",
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.1",
+		"@sveltejs/adapter-node": "^4.0.1",
 		"@sveltejs/kit": "^2.0.6",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@typescript-eslint/eslint-plugin": "^6.16.0",
