--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "modfest",
-	"version": "0.0.1",
+	"version": "1.0.0",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
@@ -9,7 +9,8 @@
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check --plugin-search-dir=. . && eslint .",
-		"format": "prettier --write --plugin-search-dir=. ."
+		"format": "prettier --write --plugin-search-dir=. .",
+		"preinstall": "npx only-allow pnpm"
 	},
 	"type": "module",
 	"devDependencies": {
@@ -23,6 +24,7 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.35.1",
 		"prettier-plugin-svelte": "^3.1.2",
+		"prettier-plugin-tailwindcss": "^0.6.11",
 		"svelte": "^4.2.8",
 		"svelte-check": "^3.6.2",
 		"svelte-preprocess": "^5.1.3",
@@ -31,6 +33,18 @@
 		"vite": "^5.0.10"
 	},
 	"dependencies": {
-		"svelte-markdown": "^0.4.1"
+		"@tailwindcss/vite": "^4.0.6",
+		"prettier": "^3.5.1",
+		"svelte-markdown": "^0.4.1",
+		"tailwindcss": "^4.0.6"
+	},
+	"pnpm": {
+		"ignoredBuiltDependencies": [
+			"esbuild",
+			"svelte-preprocess"
+		],
+		"onlyBuiltDependencies": [
+			"svelte-preprocess"
+		]
 	}
 }
